--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile2.jpg"
   name             : "Dina Soltani Tehrani"
   pronouns         : # example: "she/her"  
-  bio              : "Research assistant passionate about theoretical Fluid Dynamics."
+  bio              : "Future Fluid Dynamist!"
   location         : "Earth"
   employer         : "University of Rochester"
   URI              : "https://www.complexflowgroup.com/people/"
