--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
   weibo            : # Username
   wikipedia        : # Username
   xing             : # Username
-  youtube          : "https://www.youtube.com/@MohsenAmirii"
+  youtube          : "MohsenAmirii"
   zhihu            : # URL
 
 # Publication Category - The following the list of publication categories and their headings
