--- a/_config.yml
+++ b/_config.yml
@@ -209,7 +209,7 @@ kramdown:
 
 # These settings control the types of collections used by the template
 collections:
-  teaching:
+  Experiences:
     output: true
     permalink: /:collection/:path/
   publications:
@@ -246,7 +246,7 @@ defaults:
   # _teaching
   - scope:
       path: ""
-      type: teaching
+      type: Experiences
     values:
       layout: single
       author_profile: true
