--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,10 +5,11 @@
 # prevent it from being included in the site.
 
 main:
-  # - title: "Research"
-  #  url: "/research/"
-  - title: "Blog Posts"
-    url: /year-archive/
+
+  # - title: "Blog Posts"
+  #   url: /year-archive/
+  - title: "Research"
+    url: "/research/"
 
   - title: "Publications"
     url: /publications/
